<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="80dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/register"
                android:textColor="@color/cyan"
                android:textSize="36sp"
                android:textStyle="bold" />


            <RelativeLayout
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintTextColor="@color/hint_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="370dp"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/open_sans_regular"
                        android:hint="Username"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color"
                        android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                        android:textSize="14sp">

                    </com.google.android.material.textfield.TextInputEditText>


                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintTextColor="@color/hint_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="370dp"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/open_sans_regular"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color"
                        android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                        android:textSize="14sp">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buat_akun_button"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/button_color"
                android:text="@string/buat_akun_button"
                app:cornerRadius="8dp"
                app:strokeColor="@color/white"
                app:strokeWidth="1dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/open_sans_regular"
                android:gravity="center"
                android:text="@string/atau"
                android:textColor="@color/hint_color" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/back_to_login"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/button_color"
                android:text="@string/login_button"
                app:cornerRadius="8dp"
                app:strokeColor="@color/white"
                app:strokeWidth="1dp" />
        </LinearLayout>
    </RelativeLayout>
</layout>